--- a/src/main/resources/templates/transfert.html
+++ b/src/main/resources/templates/transfert.html
@@ -17,64 +17,74 @@
 </head>
 <body>
 
-	<div class="text-center w-75 mx-auto align-text-items">
+	<div class="w-75 mx-auto">
 
-		<form class="card p-3 bg-light" action="#" th:action="@{/transfert}"
+		<form class="p-3 bg-light" action="#" th:action="@{/transfert}"
 			th:object="${user}" method="post">
 
-			<div class="mb-5 mx-auto">
+			<div class="mb-5 mx-auto d-flex justify-content-center">
 				<button type="button" class="btn btn-success btn-group-small btn"
 					disabled>Pay My Buddy</button>
 			</div>
-			<div class="mb-1 mx-auto">
+			<div class="mb-1 mx-auto d-flex justify-content-center">
 				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled>Recipients</button>
+					disabled>Recipient accounts</button>
 			</div>
-			<div class="mb-3  mx-auto">
-				
+			<div class="mb-1 d-flex justify-content-center w-50 mx-auto">
+				<select class="form-select" th:field="${context.newCompteTo}">
+					<option th:each="compte : ${context.comptes}"
+						th:value="${compte.email}" th:text="${compte.email}"></option>
+				</select>
+				<button type="button" class="btn btn-light btn-group-small btn"
+					disabled></button>
 				<button type="button" class="btn btn-primary btn-group-small"
-					formaction="/addCompteTo" onClick="form.action='/addCompteTo';submit();">Add recipient</button>
+					formaction="/addCompteTo"
+					onClick="form.action='/addCompteTo';submit();">Add</button>
+			</div>
+			<div class="mb-1 mx-auto d-flex justify-content-center">
+				<button type="button" class="btn btn-light btn-group-small btn"
+					disabled>Transfer</button>
+			</div>
+			<div class="mb-3 d-flex mx-auto  w-50">
+				<button type="button" class="btn btn-light btn-group-small btn"
+					disabled>From</button>
 				<select class="form-select"
-					th:field="${context.newCompteTo}">
-					<option th:each="compte : ${context.comptes}" th:value="${compte.email}"
+					th:field="${context.transfertCompteFrom}">
+					<option value="">Select an account</option>
+					<option th:each="compte : *{comptesFrom}"
+						th:value="${compte.email}" th:text="${compte.email}"></option>
+				</select>
+			</div>
+			<div class="mb-3 d-flex mx-auto  w-50">
+				<button type="button" class="btn btn-light btn-group-small btn"
+					disabled>To</button>
+				<button type="button" class="btn btn-light btn-group-small btn"
+					disabled></button>	
+				<select class="form-select" th:field="${context.transfertCompteTo}">
+					<option value="">Select an account</option>
+					<option th:each="compte : *{comptesTo}" th:value="${compte.email}"
 						th:text="${compte.email}"></option>
 				</select>
 			</div>
-			<div class="mb-1 mx-auto">
-				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled>Transfert</button>
-			</div>
-			<div class="mb-3 d-flex mx-auto">
-				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled>From</button>
-				<select class="form-select" th:field="${context.transfertCompteFrom}">
-					<option value="">Select an account</option>
-					<option th:each="compte : *{comptesFrom}" th:value="${compte.email}" th:text="${compte.email}"></option>
-				</select> 
-				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled>To</button>
-				<select class="form-select" th:field="${context.transfertCompteTo}">
-					<option value="">Select an account</option>
-					<option th:each="compte : *{comptesTo}" th:value="${compte.email}" th:text="${compte.email}"></option>
-				</select>
-				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled></button> 
+			<div class="mb-3 d-flex mx-auto  w-50">
+			<button type="button" class="btn btn-light btn-group-small btn"
+					disabled>Amount</button> 
 				<input type="number" id="amount" th:field="${context.transfertAmount}"
 					name="tentacles" min="0" step="100" value="100">
 				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled></button> 	
+					disabled>Description</button> 	
 				<input type="text" id="description" th:field="${context.description}"
 				value= "Virement">	
-				<button type="button" class="btn btn-light btn-group-small btn"
-					disabled></button> 	
+			</div>
+			<div class="mb-3 d-flex mx-auto justify-content-center">
 				<button type="submit" class="btn btn-success btn-group-small">Pay</button>
 			</div>
 
-			<div class="mb-3 d-flex mx-auto">
+			<div class="mb-3 d-flex mx-auto justify-content-center">
 				<button type="button" class="btn btn-light btn-group-small btn"
 					disabled>My Transactions</button>
 			</div>
-			<div class="mb-3 mx-auto">
+			<div class="mb-3 mx-auto d-flex justify-content-center">
 				<table class="table-striped table-bordered">
 					<tr class="bg-success">
 						<th>From</th>
@@ -83,35 +93,35 @@
 						<th>Amount</th>
 					</tr>
 					<tr th:each="transaction : *{transactions}">
-					    <td th:text="${transaction.emailFrom}"></td>
+						<td th:text="${transaction.emailFrom}"></td>
 						<td th:text="${transaction.emailTo}"></td>
 						<td th:text="${transaction.description}"></td>
 						<td th:text="${transaction.amount}"></td>
 					</tr>
 				</table>
-				<div class="mb-3">
-					<nav aria-label="Page navigation example">
-						<ul class="pagination justify-content-center">
-							<li class="page-item"><a class="page-link" href="#"
-								aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
-							</a></li>
-							<li class="page-item"><a class="page-link" href="#">1</a></li>
-							<li class="page-item"><a class="page-link" href="#">2</a></li>
-							<li class="page-item"><a class="page-link" href="#">3</a></li>
-							<li class="page-item"><a class="page-link" href="#">4</a></li>
-							<li class="page-item"><a class="page-link" href="#">5</a></li>
-							<li class="page-item"><a class="page-link" href="#"
-								aria-label="Next"> <span aria-hidden="true">&raquo;</span>
-							</a></li>
-						</ul>
-					</nav>
-				</div>
-
+			</div>
+			<div class="mb-3 mx-auto d-flex justify-content-center">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination justify-content-center">
+						<li class="page-item"><a class="page-link" href="#"
+							aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
+						</a></li>
+						<li class="page-item"><a class="page-link" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item"><a class="page-link" href="#">4</a></li>
+						<li class="page-item"><a class="page-link" href="#">5</a></li>
+						<li class="page-item"><a class="page-link" href="#"
+							aria-label="Next"> <span aria-hidden="true">&raquo;</span>
+						</a></li>
+					</ul>
+				</nav>
 			</div>
 		</form>
 	</div>
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">		
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+		
 	</script>
 </body>
 </html>
