First Implementation of Spring Security in the application

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 <body>
 
 	<div class="text-center w-25 mx-auto align-text-items">
-		<form class="card p-3 bg-light" action="#" th:action="@{/login}" th:object="${user}" method="post">
+		<form class="card p-3 bg-light" action="#" th:action="@{/login}" th:object="${person}" method="post">
 			<div class="mb-5">
 				<button type="button" class="btn btn-success btn-group-small btn"
 					disabled>Pay My Buddy</button>
