--- a/src/main/resources/templates/transfert.html
+++ b/src/main/resources/templates/transfert.html
@@ -20,7 +20,7 @@
 	<div class="w-75 mx-auto">
 
 		<form class="p-3 bg-light" action="#" th:action="@{/transfert}"
-			th:object="${user}" method="post">
+			th:object="${person}" method="post">
 
 			<div class="mb-5 mx-auto d-flex justify-content-center">
 				<button type="button" class="btn btn-success btn-group-small btn"
@@ -66,7 +66,7 @@
 						th:text="${compte.email}"></option>
 				</select>
 			</div>
-			<div class="mb-3 d-flex mx-auto  w-50">
+			<div class="mb-3 d-flex mx-auto w-50">
 			<button type="button" class="btn btn-light btn-group-small btn"
 					disabled>Amount</button> 
 				<input type="number" id="amount" th:field="${context.transfertAmount}"
