End implementation Spring Security

--- a/src/main/resources/templates/transfert.html
+++ b/src/main/resources/templates/transfert.html
@@ -20,7 +20,7 @@
 	<div class="w-75 mx-auto">
 
 		<form class="p-3 bg-light" action="#" th:action="@{/transfert}"
-			th:object="${person}" method="post">
+			th:object="${context.person}" method="post">
 
 			<div class="mb-5 mx-auto d-flex justify-content-center">
 				<button type="button" class="btn btn-success btn-group-small btn"
