--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,34 +16,54 @@
 <body>
 
 	<div class="text-center w-25 mx-auto align-text-items">
-		<form class="card p-3 bg-light" action="#" th:action="@{/login}" th:object="${person}" method="post">
+		<form class="card p-3 bg-light" action="#" th:action="@{/login}"
+			method="post">
 			<div class="mb-5">
 				<button type="button" class="btn btn-success btn-group-small btn"
 					disabled>Pay My Buddy</button>
 			</div>
+
+			<div th:if="${param.error}"
+				class="mb-5 alert alert-error text-danger">Invalid username
+				and/or password.</div>
+			<div th:if="${param.logout}"
+				class="mb-5 alert alert-success text-success">You have been
+				successfully logged out.</div>
+
 			<div class="mb-3 d-flex">
 				<i class="bi bi-envelope my-auto"></i> <input type="email"
-					class="form-control" id="inputEmail" th:field="*{email}" placeholder="Email"  required>
+					class="form-control" id="inputEmail" name="username"
+					placeholder="Email" required>
 			</div>
 			<div class="mb-3  d-flex">
 				<i class="bi bi-lock-fill  my-auto"></i> <input type="password"
-					class="form-control" id="inputPassword" th:field="*{password}" placeholder="Password"
-					required>
+					class="form-control" id="inputPassword" name="password"
+					placeholder="Password" required>
 			</div>
-			<div class="mb-3">
-				<div class="form-check">
-					<input class="form-check-input" type="checkbox" checked
-						id="checkRemember"> <label class="form-check-label"
-						for="checkRemember">Remember me</label>
-				</div>
-			</div>
-			<div class="mb-3">
+			<div class="mb-5">
 				<button type="submit" class="btn btn-primary btn-group-small">Login</button>
+			</div>
+			<div class="mb-3">
+				<div class="mb-3">
+					<button type="button" class="btn btn-success btn-group-small btn"
+						disabled>Login with:</button>
+				</div>
+				<p>
+					<a class="link-primary" th:href="${urlGoogle}"> <img
+						src="images/icons8-google-24.png"> Google
+					</a>
+				</p>
+				<p>
+					<a class="link-primary" th:href="${urlGithub}"> <img
+						src="images/icons8-github-24.png"> GitHub
+					</a>
+				</p>
 			</div>
 		</form>
 	</div>
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">		
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+		
 	</script>
 </body>
 </html>
