End basic IHM and link to Spring Security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,20 +50,19 @@
 				</div>
 				<p>
 					<a class="link-primary" th:href="${urlGoogle}"> <img
-						src="images/icons8-google-24.png"> Google
+						th:src="${urlIconGoogle}"> Google
 					</a>
 				</p>
 				<p>
 					<a class="link-primary" th:href="${urlGithub}"> <img
-						src="images/icons8-github-24.png"> GitHub
+						th:src="${urlIconGithub}"> GitHub
 					</a>
 				</p>
 			</div>
 		</form>
 	</div>
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
-		
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">		
 	</script>
 </body>
 </html>
