--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,10 +29,17 @@
 			<div th:if="${param.logout}"
 				class="mb-5 alert alert-success text-success">You have been
 				successfully logged out.</div>
+			<div th:if="${userAlreadyRegistered}"
+				class="mb-5 alert alert-success text-danger">User already
+				registered</div>
+			<div th:if="${userSuccessfullyRegistered}"
+				class="mb-5 alert alert-success text-success">User successfully
+				registered, please sign in</div>
+
 
 			<div class="mb-3 d-flex">
 				<i class="bi bi-envelope my-auto"></i> <input type="email"
-					class="form-control" id="inputEmail" name="username"
+					class="form-control" id="inputEmail" name="username" th:value="${username}"
 					placeholder="Email" required>
 			</div>
 			<div class="mb-3  d-flex">
@@ -40,8 +47,12 @@
 					class="form-control" id="inputPassword" name="password"
 					placeholder="Password" required>
 			</div>
+			<div class="mb-2">
+				<button type="submit" class="btn btn-primary btn-group-small">Sign in</button>
+			</div>
 			<div class="mb-5">
-				<button type="submit" class="btn btn-primary btn-group-small">Login</button>
+				<button type="button" class="btn btn-link btn-group-small btn"
+					onClick="form.method='get';form.action='/registerNewUser';submit();">New user? Register here.</button>
 			</div>
 			<div class="mb-3">
 				<div class="mb-3">
@@ -62,7 +73,8 @@
 		</form>
 	</div>
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">		
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+		
 	</script>
 </body>
 </html>
