--- a/src/main/resources/templates/registerNewUser.html
+++ b/src/main/resources/templates/registerNewUser.html
@@ -42,6 +42,10 @@
 			<div class="mb-2">
 				<button type="submit" class="btn btn-primary btn-group-small">Register</button>
 			</div>
+			<div class="mb-5">
+				<button type="button" class="btn btn-link btn-group-small btn"
+					onClick="form.method='get';form.action='/login';submit();">Return to login.</button>
+			</div>
 		</form>
 	</div>
 	<script
