--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row">
+			<div class="row mb-3">
 				<div class="col-3"></div>
 				<div class="col-1">
 					<span>Name:</span>
