--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -46,13 +46,13 @@
 			</div>
 		</div>
 		<div class="mb-3 d-flex mx-auto  w-50">
-			<div th:if="${selectAccountToAdd}"
+			<div th:if="${error_selectAccountToAdd}"
 				class="mb-5 alert alert-success text-danger">Select an account
 				to add to the contacts.</div>
-			<div th:if="${selectAccountToRemove}"
+			<div th:if="${error_selectAccountToRemove}"
 				class="mb-5 alert alert-success text-danger">Select a contact
 				to remove</div>
-			<div th:if="${accountAlreadyExists}"
+			<div th:if="${error_accountAlreadyExists}"
 				class="mb-5 alert alert-success text-danger">Account already exists in contacts.</div>
 		</div>
 
